there is error for delete pantry item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.DeliciFind"
         tools:targetApi="31">
         <activity
+            android:name=".showProfile"
+            android:exported="false" />
+        <activity
             android:name=".createNewProduct"
             android:exported="false" />
         <activity
